--- a/templates/result.html
+++ b/templates/result.html
@@ -3,27 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Result</title>
+    <title>Crime Prediction</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        .heading {
-            margin-top: 50px;
-            text-align: center;
-        }
-        .sub-heading {
-            margin-top: 30px;
-        }
-        .text {
-            margin-top: 20px;
-            text-align: center;
-        }
-        .list-item {
-            margin-top: 10px;
-        }
-    </style>
 </head>
 <body>
-    <div class="px-3 py-2 text-bg-dark border-bottom" bis_skin_checked="1">
+
+      <div class="px-3 py-2 text-bg-dark border-bottom" bis_skin_checked="1">
         <div class="container" bis_skin_checked="1">
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start" bis_skin_checked="1">
             <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
@@ -33,12 +18,12 @@
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
               <li>
                 <a href="/" class="nav-link text-secondary">
-                  <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href=""></use></svg>
+                  <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="/"></use></svg>
                   Home
                 </a>
               </li>
               <li>
-                <a href="#" class="nav-link text-white">
+                <a href="/help" class="nav-link text-white">
                   <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#speedometer2"></use></svg>
                   Need Help
                 </a>
