--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crime Prediction</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
 
@@ -12,29 +13,29 @@
         <div class="container" bis_skin_checked="1">
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start" bis_skin_checked="1">
             <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-              <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+              <img src="image.png" alt="logo" width="75px" height="60px">
             </a>
   
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
               <li>
-                <a href="/" class="nav-link text-secondary">
-                  <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="/"></use></svg>
+                <a href="#" class="nav-link text-secondary">
+                  <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#home"></use></svg>
                   Home
                 </a>
               </li>
               <li>
-                <a href="/help" class="nav-link text-white">
+                <a href="#" class="nav-link text-white">
                   <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#speedometer2"></use></svg>
                   Need Help
                 </a>
               </li>
               <li>
-                <a href="/contact" class="nav-link text-white">
+                <a href="#" class="nav-link text-white">
                   <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#table"></use></svg>
                   Contact Us
                 </a>
               </li>
-              <li class="dropdown mb-1 pb-0">
+              <li class="dropdown">
                 <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Search for crime
                 </a>
@@ -44,7 +45,7 @@
                 </ul>
             </li>
               <li>
-                <a href="/report" class="nav-link text-white">
+                <a href="#" class="nav-link text-white">
                   <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#people-circle"></use></svg>
                   Report Crime
                 </a>
@@ -53,16 +54,55 @@
           </div>
         </div>
       </div>
-    <div class="container mt-4">
-        <h1 class="text-center">Crime Prediction</h1>
-        <form action="/predict" method="post">
-            <div class="mb-3">
-                <label for="state" class="form-label">Enter State Name:</label>
-                <input type="text" id="state" name="state" class="form-control" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Predict</button>
-        </form>
+
+    <div class="container col-xxl-8 px-4 py-5" bis_skin_checked="1">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5" bis_skin_checked="1">
+        <div class="col-10 col-sm-8 col-lg-6" bis_skin_checked="1">
+          <img src="logo-no-background.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="400" height="300" loading="lazy">
+        </div>
+        <div class="col-lg-6" bis_skin_checked="1">
+          <!-- <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">VIGILIFY</h1> -->
+          <p class="lead"><h1>Unlock Tomorrow's Safety with Today's Insight</h1></p>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-start" bis_skin_checked="1">
+          </div>
+        </div>
+      </div>
     </div>
+    <section>
+      <div class="container px-4 py-5" id="hanging-icons" bis_skin_checked="1">
+        <h2 class="pb-2 border-bottom">About Us</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3" bis_skin_checked="1">
+          <div class="col d-flex align-items-start" bis_skin_checked="1">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3" bis_skin_checked="1">
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
+            </div>
+            <div bis_skin_checked="1">
+              <h3 class="fs-2 text-body-emphasis">Vision</h3>
+              <p>Predict and mitigate crime hotspots, fostering a safer environment for women</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start" bis_skin_checked="1">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3" bis_skin_checked="1">
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#cpu-fill"></use></svg>
+            </div>
+            <div bis_skin_checked="1">
+              <h3 class="fs-2 text-body-emphasis">Impact</h3>
+              <p>By harnessing data-driven insights, we strives to create safer environments for women, fostering a culture of proactive crime prevention.</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start" bis_skin_checked="1">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3" bis_skin_checked="1">
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#tools"></use></svg>
+            </div>
+            <div bis_skin_checked="1">
+              <h3 class="fs-2 text-body-emphasis">Services</h3>
+              <p>-Generate proactive system alerts and recommendation.</p>
+              <p>-Safety Assistance</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
     <footer class="footer bg-dark text-white fixed-bottom pt-3">
