--- a/templates/index.html
+++ b/templates/index.html
@@ -18,19 +18,19 @@
   
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
               <li>
-                <a href="#" class="nav-link text-secondary">
+                <a href="/" class="nav-link text-secondary">
                   <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#home"></use></svg>
                   Home
                 </a>
               </li>
               <li>
-                <a href="#" class="nav-link text-white">
+                <a href="/help" class="nav-link text-white">
                   <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#speedometer2"></use></svg>
                   Need Help
                 </a>
               </li>
               <li>
-                <a href="#" class="nav-link text-white">
+                <a href="/contact" class="nav-link text-white">
                   <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#table"></use></svg>
                   Contact Us
                 </a>
@@ -45,7 +45,7 @@
                 </ul>
             </li>
               <li>
-                <a href="#" class="nav-link text-white">
+                <a href="/report" class="nav-link text-white">
                   <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#people-circle"></use></svg>
                   Report Crime
                 </a>
